# kiosk-software

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  Home.tsx  kiosk.ts  main.tsx  router.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/checkPrinter/: check.rs
src-tauri/src/commands/network/: mod.rs  network_commands.rs
src-tauri/src/commands/otp/: mod.rs  otp_commands.rs
src-tauri/src/commands/pdf_job/: job_commands.rs  mod.rs
src-tauri/src/commands/prin_job/: job_commands.rs
src-tauri/src/commands/print/: mod.rs  print_commands.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/job/: mod.rs  print_job.rs  print_job_file.rs  token_job_response.rs
src-tauri/src/modules/print/: mod.rs  print_types.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/expire_session/: expire.rs
src-tauri/src/services/otp/: mod.rs  otp_services.rs
src-tauri/src/services/pdf_job/: job_services.rs  mod.rs
src-tauri/src/services/print/: mod.rs  printer_service.rs
src-tauri/src/services/server/: mod.rs  printer_event_service.rs
src/components/: OfflinePopup.tsx  loading.tsx  metadata.tsx  otp.tsx  thankyou.tsx
src/hooks/: useNetworkStatus.ts
src/store/: jobStore.ts
